fixed folder basenames, created initial formatting entry

--- a/my_file.html
+++ b/my_file.html
@@ -5,14 +5,14 @@
      DO NOT EDIT! -->
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
 <TITLE>Primary</TITLE>
-				<DT><H3 ADD_DATE="20240407165646" LAST_MODIFIED="20240422194710">C:\Users\juans\Desktop\pyt\Primary</H3>
-<TITLE>Primary</TITLE>
 <H1>Bookmarks</H1>
+				<DT><H3 ADD_DATE="20240407165646" LAST_MODIFIED="20240423204835">Bookmarks</H3>
+				</DL><p>
+				<DT><H3 ADD_DATE="20240407165646" LAST_MODIFIED="20240423204835">Primary</H3>
+				</DL><p>
 <DL><p>
-    <DT><H3 ADD_DATE="dircre" LAST_MODIFIED="dirmod" PERSONAL_TOOLBAR_FOLDER="true">Bookmarks</H3>
-    <DL><p>
 				<DT><A HREF="https://www.google.com/url?q=https://www.boredpanda.com/japan-interesting-pics-part-1/?utm_source%3Dcom.google.android%26utm_medium%3Dreferral%26utm_campaign%3Dorganic&usg=AOvVaw0k6IuZuDiC-0-ozc9CyjPI" ADD_DATE="20240407172952" LAST_MODIFIED="20240401014357">test</A>
-				<DT><H3 ADD_DATE="20240411164858" LAST_MODIFIED="20240411164927">C:\Users\juans\Desktop\pyt\Primary\subdir</H3>
+				<DT><H3 ADD_DATE="20240411164858" LAST_MODIFIED="20240411164927">subdir</H3>
+				</DL><p>
 				<DT><A HREF="https://www.google.com/url?q=https://www.boredpanda.com/japan-interesting-pics-part-1/?utm_source%3Dcom.google.android%26utm_medium%3Dreferral%26utm_campaign%3Dorganic&usg=AOvVaw0k6IuZuDiC-0-ozc9CyjPI" ADD_DATE="20240411164919" LAST_MODIFIED="20240401014357">test2</A>
-
 </DL><p>
